# coconuts-discord-bot

./: .replit  README.md  bot.py  pyproject.toml
cogs/: communication.py  utility.py
modules/: schedules.py  utility.py
