[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["WinstonLam <<>>"]
description = ""
name = "coconuts-discord-bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]
